# moos-ivp-logan

missions/PoseKeeping/charles_river_mission/heron/: launch_vehicle.sh  meta_vehicle.moos
missions/PoseKeeping/charles_river_mission/shoreside/: scp.sh
missions/PoseKeeping/simulation_mission/: alpha.bhv  logan.moos
missions/uSimMarineX/: charlie.moos
missions/uSimMarineX_HWGR/: charlie.bhv  charlie.moos
src/: CMakeLists.txt
src/pPoseKeeping/: PoseKeeping.cpp  PoseKeeping.h
src/pPoseKeepingX/: Mode.cpp  Mode.h  PoseKeepingX.cpp  PoseKeepingX.h
src/ptesting/: CMakeLists.txt  main.cpp  ptesting.moos  testing.cpp  testing.h  testing_Info.cpp  testing_Info.h
src/uSimMarineX/: CMakeLists.txt  USM_MOOSApp.cpp  USM_MOOSApp.h  USM_Model.cpp  USM_Model.h
src/uSimMarineX_HWGR/: HI_MIKE_README.txt  USM_MOOSApp.cpp  USM_MOOSApp.h  USM_Model.cpp  USM_Model.h
